--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1, h2, h3 {
   align-items: center;
   transition: 0.3s;
 }
-
+@media screen and (max-width: 600px)
 .sidebar a:hover {
   background-color: rgba(255, 0, 0, 0.2);
   color: #fff;
