--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ body[dir="rtl"] .menu-list a {
   width: 140px;
   height: 140px;
   border-radius: 20px;
-  background: url('profile.jpg') center/cover no-repeat;
+  background: url('https://files.catbox.moe/0nlvog.jpg') center/cover no-repeat;
   box-shadow:
     inset 2px 2px 6px #000,
     inset -2px -2px 6px #440000,
