--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
   color: #ff1a1a;
   overflow-x: hidden;
   box-sizing: border-box;
+  background-image: url('https://files.catbox.moe/nfg9z4.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed
 }
 
 /* الخلفية */
