--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   color: #ff1a1a;
   overflow-x: hidden;
   box-sizing: border-box;
-  background-image: url('https://pin.it/3Kbz6uyLv');
+  background-image: url('https://files.catbox.moe/l1qmio.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
