--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Creepster', cursive;
-  background-image: url('https://files.catbox.moe/0nlvog.jpg');
+  background-image: url('https://files.catbox.moe/l1qmio.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
