--- a/style.css
+++ b/style.css
@@ -98,10 +98,10 @@ body[dir="rtl"] .menu-list { flex-direction: row; top: 70px; right: 30px; }
   color: white;
   font-family: 'Creepster', cursive;
   font-size: 22px;
-  text-shadow: 0 0 6px crimson;
   box-shadow: 0 0 15px crimson;
   cursor: pointer;
-  transition: 0.3s ease-in-out;
+  transition: 0.2s ease-in-out;
+  position: relative;
 }
 
 .square:hover {
@@ -109,9 +109,29 @@ body[dir="rtl"] .menu-list { flex-direction: row; top: 70px; right: 30px; }
   box-shadow: 0 0 25px red, 0 0 10px crimson;
 }
 
+.square:active {
+  transform: scale(0.95);
+  box-shadow: 0 0 15px red inset;
+}
+
 .square i {
   font-size: 42px;
   margin-bottom: 12px;
   color: #25D366;
   text-shadow: 0 0 6px #25D366, 0 0 3px #128C7E;
+}
+
+.square:nth-child(2) i {
+  color: #ffcc00;
+  text-shadow: 0 0 6px #ffcc00, 0 0 3px #b8860b;
+}
+
+.engraved-text {
+  text-shadow:
+    1px 1px 0 #000,
+   -1px -1px 0 #000,
+    1px -1px 0 #000,
+   -1px 1px 0 #000,
+    0 0 10px crimson;
+  color: #fff;
 } 
